# OOP-Homework-3

./: CMakeLists.txt  README.md
include/: Array.h  Figure.h  Octagon.h  Point.h  Square.h  Triangle.h
src/: Array.cpp  Figure.cpp  Octagon.cpp  Point.cpp  Square.cpp  Triangle.cpp  main.cpp
tests/: test_array.cpp  test_figures.cpp
